#35400 Updated Locations naming.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2049,10 +2049,10 @@
   "settings.EditWarehouse": "Edit Warehouse",
   "settings.AddWarehouse": "Add Warehouse",
   "settings.warehouseName": "Warehouse Name",
-  "settings.pickUpLocationName": "Pick-Up Location Name",
-  "settings.pickupLocation": "Pick-Up Location",
+  "settings.pickUpLocationName": "Warehouse Name",
+  "settings.pickupLocation": "Warehouse",
   "settings.alsoCreateAsBranch": "Also create as Branch",
-  "settings.alsoCreateAsPickUpLocation": "Also create as Pick-Up Location",
+  "settings.alsoCreateAsPickUpLocation": "Also create as Warehouse",
   "settings.branchName": "Branch Name",
   "settings.accountNumber": "Account Number",
   "settings.accountType": "Account Type",
@@ -2126,8 +2126,8 @@
   "settings.tables.guestCompanies.search": "Search Guest Companies",
   "settings.tables.branches.buttonAdd": "Add Branch",
   "settings.tables.branches.search": "Search branch by name, address or contact ",
-  "settings.tables.warehouses.buttonAdd": "Add Pick-Up Location",
-  "settings.tables.warehouses.search": "Search Pick-Up Location",
+  "settings.tables.warehouses.buttonAdd": "Add Warehouse",
+  "settings.tables.warehouses.search": "Search Warehouse",
   "settings.tables.products.buttonAdd": "Add Product",
   "settings.tables.products.buttonImport": "Import",
   "settings.tables.products.search": "Search product by name, code",
@@ -2146,19 +2146,19 @@
   "settings.bankAccounts.uploadDoc.license": "License",
   "settings.bankAccounts.uploadDoc.idcard": "ID Card",
   "settings.bankAccounts.uploadDoc.other": "Other",
-  "settings.tables.deliveryAddresses.buttonAdd": "Add Delivery Location",
-  "settings.tables.deliveryAddresses.search": "Search Delivery Location",
+  "settings.tables.deliveryAddresses.buttonAdd": "Add Customer Ship To Address",
+  "settings.tables.deliveryAddresses.search": "Search Customer Ship To Address",
   "settings.tables.logistics.buttonAdd": "Add Logistics",
   "settings.tables.logistics.search": "Search logistics ",
   "settings.tables.documents.buttonAdd": "Add Document",
   "settings.branches.enterBranch": "Enter Branch Name",
-  "settings.warehouses.enterWarehouseName": "Enter Pick-Up Location Name",
+  "settings.warehouses.enterWarehouseName": "Enter Warehouse Name",
   "settings.warehouses.enterContactName": "Enter Contact Name",
   "settings.warehouses.enterEmailAddress": "Enter Email Address",
   "settings.warehouses.enterTaxId": "Enter Tax ID",
   "settings.warehouses.writeDeliveryNotesHere": "Write Delivery Notes Here",
-  "settings.locations.menu.deliveryLocations": "Delivery Locations",
-  "settings.locations.menu.pickUpLocations": "Pick-Up Locations",
+  "settings.locations.menu.deliveryLocations": "Customer Ship To",
+  "settings.locations.menu.pickUpLocations": "Warehouses",
   "settings.locations.menu.branches": "Branches",
   "settings.branches.setAsPrimaryBranch": "Set as Primary Branch",
   "related.documents.addDocument": "Add Document",
@@ -2515,9 +2515,9 @@
   "tutorial.users.title": "Add Users",
   "tutorial.users.content": "Invite other team members to buy and sell with you!",
   "tutorial.users.button": "Add User",
-  "tutorial.pickup.title": "Add Pick-Up Locations",
-  "tutorial.pickup.content": "Add a Pick-Up Location and be one step closer to posting on the Marketplace.",
-  "tutorial.pickup.button": "Add Pick-Up Location",
+  "tutorial.pickup.title": "Add Warehouses",
+  "tutorial.pickup.content": "Add a Warehouse and be one step closer to posting on the Marketplace.",
+  "tutorial.pickup.button": "Add Warehouse",
   "tutorial.products.title": "Add Products",
   "tutorial.products.content": "You can import with this .csv template or add them individually.",
   "tutorial.products.button": "Add Products",
@@ -2584,7 +2584,7 @@
   "wantedBoard.expirationDate": "Expiration Date",
   "wantedBoard.dealExpired": "Deal Expired",
   "wantedBoard.deliveryLoc": "Delivery Loc",
-  "wantedBoard.deliveryLocation": "Delivery Location",
+  "wantedBoard.deliveryLocation": "Customer Ship To",
   "wantedBoard.deliveryPriceMax": "Delivery Price Max",
   "wantedBoard.weightUnit": "Weight Unit",
   "wantedBoard.meas": "Meas",
