new UX and template for broadcast modal

--- a/localization/en.json
+++ b/localization/en.json
@@ -1228,6 +1228,7 @@
   "filter.dateTo": "To",
   "filter.startTypingToSearch": "Start typing to search",
   "filter.noResultsFound": "No results found.",
+  "global.noRecords": "No records found.",
   "filter.To": "To",
   "filter.min": "Min",
   "filter.max": "Max",
@@ -2548,6 +2549,7 @@
   "broadcast.turnoff.content": "Global rules are going to be used. To turn off broadcasting completely, edit it inside Edit tab.",
   "broadcast.toAll": "Broadcast to All",
   "broadcast.select.templates": "Select From Templates",
+  "broadcast.select.templates.title": "SELECT FROM TEMPLATES",
   "broadcast.search": "Search by Company Name, Branch, State, or Country",
   "order.detail.documents.issuer": "Issuer",
   "order.detail.documents.date": "Document Date",
