--- a/localization/en.json
+++ b/localization/en.json
@@ -24,6 +24,10 @@
   "alerts.column.timeRead": "Time Read",
   "alerts.status.read": "Read",
   "alerts.status.unread": "Unread",
+  "alerts.dropdown.more": "More ...",
+  "alerts.dropdown.markAsRead": "Mark as read",
+  "alerts.dropdown.markAsUnread": "Mark as unread",
+  "alerts.dropdown.delete": "Delete",
   "auth.resetMyPassword": "Password Reset",
   "auth.cancelPasswordReset": "Password Reset Cancel",
   "auth.username": "Username",
