error page, adjust phone component, register verification

--- a/localization/en.json
+++ b/localization/en.json
@@ -885,7 +885,9 @@
   "global.companyLogo": "Company Logo",
   "global.address.enterStreet": "Enter Street",
   "global.address.selectCountry": "Select Country",
+  "global.address.enterCountry": "Enter Country",
   "global.address.selectStateProvince": "Select State/Province",
+  "global.address.enterStateProvince": "Enter State/Province",
   "global.address.selectCity": "Select City",
   "global.address.enterZip": "Enter Zip",
   "global.productGroup": "Product Group",
