#35378 Notifications page updates.

--- a/localization/en.json
+++ b/localization/en.json
@@ -18,10 +18,11 @@
   "alerts.button.all": "All",
   "alerts.button.read": "Read",
   "alerts.button.unread": "Unread",
-  "alerts.column.notifications": "Notifications",
-  "alerts.column.readStatus": "Read Status",
-  "alerts.column.timeCreated": "Time Created",
-  "alerts.column.timeRead": "Time Read",
+  "alerts.column.notification": "Notification",
+  "alerts.column.notificationType": "Notification Type",
+  "alerts.column.nameOfUser": "Name Of User",
+  "alerts.column.usersCompany": "User's Company",
+  "alerts.column.time": "Time",
   "alerts.status.read": "Read",
   "alerts.status.unread": "Unread",
   "alerts.dropdown.more": "More ...",
