#35378 Added/fixed Notifications datagrid table workarounds.

--- a/localization/en.json
+++ b/localization/en.json
@@ -23,6 +23,12 @@
   "alerts.column.nameOfUser": "Name Of User",
   "alerts.column.usersCompany": "User's Company",
   "alerts.column.time": "Time",
+  "alerts.column.expand": "Expand",
+  "alerts.notificationsCount": "{count} {notification} on this page {is} selected",
+  "alerts.notification": "notification",
+  "alerts.notifications": "notifications",
+  "alerts.is": "is",
+  "alerts.are": "are",
   "alerts.status.read": "Read",
   "alerts.status.unread": "Unread",
   "alerts.dropdown.more": "More ...",
