--- a/localization/en.json
+++ b/localization/en.json
@@ -2938,9 +2938,16 @@
   "velloci.companyVerification.list.license": "Business License",
   "velloci.companyVerification.list.certificate": "Certificate of Good Standing",
   "orders.orderStatus": "Order Status",
-  "orders.deliveryStatus": "Delivery Status",
+  "orders.shippingStatus": "Delivery Status",
   "orders.reviewStatus": "Review Status",
   "orders.creditStatus": "Credit Status",
-  "orders.paymentStatus": "Payment Status"
+  "orders.paymentStatus": "Payment Status",
+  "orders.productName": "Product Name",
+  "orders.packaging": "Packaging",
+  "orders.fobPrice": "FOB Price",
+  "orders.bl": "B/L",
+  "orders.sds": "SDS",
+  "orders.cofA": "C of A",
+  "orders.orderTotal": "Order Total"
 
 }
