--- a/localization/en.json
+++ b/localization/en.json
@@ -2930,6 +2930,7 @@
   "velloci.companyVerification.list.field": "Filed and stamped articles of incorporation",
   "velloci.companyVerification.list.tax": "Sales/Use Tax License",
   "velloci.companyVerification.list.license": "Business License",
-  "velloci.companyVerification.list.certificate": "Certificate of Good Standing"
-
+  "velloci.companyVerification.list.certificate": "Certificate of Good Standing",
+  "detailRow.shippingQuoteId": "Shipping Quote ID",
+  "detailRow.infoType": "Info Type"
 }
