--- a/localization/en.json
+++ b/localization/en.json
@@ -49,6 +49,8 @@
   "alerts.stackable": "Stackable",
   "alerts.freezeProtect": "Freeze Protect",
   "alerts.addShippingQuote": "Add Shipping Quote",
+  "alerts.shippingQuoteId": "Shipping Quote ID",
+  "alerts.checkout": "Checkout",
   "auth.resetMyPassword": "Password Reset",
   "auth.cancelPasswordReset": "Password Reset Cancel",
   "auth.username": "Username",
