#35488 Fixed Import fields.

--- a/localization/en.json
+++ b/localization/en.json
@@ -945,7 +945,8 @@
   "import.broadcasted": "Broadcasted",
   "import.companyProduct": "Internal Product Code",
   "import.conditionNotes": "Condition Notes",
-  "import.conforming": "Condition",
+  "import.condition": "Condition",
+  "import.conforming": "Conforming",
   "import.costPerUom": "Cost per UOM",
   "import.costRecords": "Cost Records",
   "import.currency": "Currency",
