--- a/localization/en.json
+++ b/localization/en.json
@@ -181,6 +181,8 @@
   "navigation.marketplace": "Marketplace",
   "navigation.marketplaceListings": "Listings",
   "navigation.marketplaceHolds": "Holds",
+  "navigation.marketplaceBidsSent": "Bids Sent",
+  "navigation.marketplaceBidsReceived": "Bids Received",
   "navigation.wantedBoard": "Wanted Board",
   "navigation.shoppingCart": "Shopping Cart",
   "navigation.salesOrders": "Sales Orders",
@@ -207,7 +209,7 @@
   "navigation.guests": "Guests",
   "navigation.chat": "Chat",
   "navigation.wantedBoardListings": "Listings",
-  "navigation.wantedBoardBidsSent": "My Offers",
+  "navigation.wantedBoardBidsSent": "Bids Sent",
   "navigation.wantedBoardBidsReceived": "My Requests",
   "navigation.cas-products": "Cas Products",
   "navigation.product-catalog": "Product Catalog",
@@ -1996,6 +1998,7 @@
   "marketplace.multipleEchoProduct": "Please, only select inventory for the same product to get a Shipping Quote",
   "marketplace.notes": "Notes",
   "marketplace.info": "Info",
+  "marketplace.makeAnOffer": "Make an Offer",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by TBD",
@@ -2603,7 +2606,7 @@
   "settings.warehouse.certificateIcon.header": "Certificate is attached and so will be visible anywhere",
   "title.wantedBoardListings": "Listings",
   "title.wantedBoardBidsReceived": "My Requests",
-  "title.wantedBoardBidsSent": "My Offers",
+  "title.wantedBoardBidsSent": "Bids Sent",
   "wantedBoard.product": "Product",
   "wantedBoard.productName": "Product Name",
   "wantedBoard.enterProductName": "Enter any Product Name",
