changed verbiage in price book

--- a/localization/en.json
+++ b/localization/en.json
@@ -137,8 +137,8 @@
   "admin.admin": "Re-Invoice",
   "admin.addLogisticsProvider": "Add Logistics Provider",
   "admin.editLogisticsProvider": "Edit Logistics Provider",
-  "broadcast.byRegion": "By Region",
-  "broadcast.byCompany": "By Company",
+  "broadcast.byRegion": "Regions",
+  "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
   "broadcast.broadcastingTo": "Visible to",
   "broadcast.broadcastingBranches": " branches of ",
