--- a/localization/en.json
+++ b/localization/en.json
@@ -2954,6 +2954,7 @@
   "detailRow.bl": "B/L",
   "detailRow.sds": "SDS",
   "detailRow.cofA": "C of A",
-  "detailRow.orderTotal": "Order Total"
+  "detailRow.orderTotal": "Order Total",
+  "broadcast.saveAsTemplate": "Save as Templates"
 
 }
