--- a/localization/en.json
+++ b/localization/en.json
@@ -211,7 +211,7 @@
   "navigation.wantedBoardListings": "Listings",
   "navigation.wantedBoardBidsSent": "My Offers",
   "navigation.wantedBoardBidsReceived": "My Requests",
-  "navigation.cas-products": "Cas Products",
+  "navigation.cas-products": "CAS Products",
   "navigation.product-catalog": "Product Catalog",
   "navigation.product-groups": "Product Groups",
   "navigation.operations.shipping-quotes": "Shipping Quotes",
@@ -943,6 +943,13 @@
   "global.packagingDimensions": "Packaging Dimensions",
   "global.freight": "Freight",
   "global.select": "Select",
+  "global.epa": "EPA",
+  "global.dhs": "DHS",
+  "global.dea": "DEA",
+  "global.others": "OTHERS",
+  "global.international": "INTERNATIONAL",
+  "global.caProp65": "CA PROP 65",
+  "global.rightToKnow": "RIGHT TO KNOW",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -2535,7 +2542,7 @@
   "title.inventory.globalPriceBook": "Global Price Book",
   "title.companies.users": "Users",
   "title.companies.companies": "Companies",
-  "title.products.casProducts": "Cas Products",
+  "title.products.casProducts": "CAS Products",
   "title.products.productCatalog": "Product Catalog",
   "title.products.productGroups": "Product Groups",
   "holds.intProductName": "Product Name",
