--- a/localization/en.json
+++ b/localization/en.json
@@ -2274,6 +2274,7 @@
   "order.productName": "Product Name",
   "order": "Order",
   "order.shipping": "Shipping",
+  "order.shippingCost": "Shipping Cost",
   "order.deliveryInfo": "Delivery Info",
   "order.tax": "Tax",
   "order.fobPrice": "FOB Price",
@@ -2342,6 +2343,7 @@
   "order.amount": "Amount",
   "order.echoFees": "Echo Fees",
   "order.total": "Total",
+  "order.totalPrice": "Total Price",
   "order.cogs": "COGS",
   "order.grossProfit": "Gross Profit",
   "order.subtotal": "Subtotal",
