#35511 Marketplace updates, popups and temporary endpoints added.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2011,12 +2011,23 @@
   "marketplace.makeAnOffer": "Make an Offer",
   "marketplace.productName": "Product Name",
   "marketplace.yourFobPriceOffer": "Your FOB price offer",
-  "marketplace.messageToSeller": "Message to Seller",
+  "marketplace.messageToBuyer": "Message to Buyer",
+  "marketplace.messageFromSeller": "Message from Seller",
   "marketplace.YourTotalBid": "Your Total Bid",
   "marketplace.optional": "Optional",
   "marketplace.sellerHas24HoursToReply": "Seller has 24 hours to reply.",
-
-
+  "marketplace.submitOffer": "Submit Offer",
+  "marketplace.listFobPrice": "List FOB Price",
+  "marketplace.totalListPrice": "Total List Price",
+  "marketplace.incoterms": "Incoterms",
+  "marketplace.enterMessage": "Enter Message...",
+  "marketplace.offeredFobPrice": "Offered FOB Price",
+  "marketplace.totalOfferedPrice": "Total Offered Price",
+  "marketplace.enterCounterBid": "Enter Counter Bid",
+  "marketplace.or": "or",
+  "marketplace.accept": "Accept",
+  "marketplace.counter": "Counter",
+  "marketplace.tbd": "TBD ! !",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by TBD",
