#35511 Updated Marketplace Bids Sent/Received datagrids/popups.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2017,6 +2017,7 @@
   "marketplace.optional": "Optional",
   "marketplace.sellerHas24HoursToReply": "Seller has 24 hours to reply.",
   "marketplace.submitOffer": "Submit Offer",
+  "marketplace.bidReceived": "Bid Received",
   "marketplace.listFobPrice": "List FOB Price",
   "marketplace.totalListPrice": "Total List Price",
   "marketplace.incoterms": "Incoterms",
@@ -2025,8 +2026,13 @@
   "marketplace.totalOfferedPrice": "Total Offered Price",
   "marketplace.enterCounterBid": "Enter Counter Bid",
   "marketplace.or": "or",
+  "marketplace.send": "Send",
   "marketplace.accept": "Accept",
+  "marketplace.reject": "Reject",
   "marketplace.counter": "Counter",
+  "marketplace.delete": "Delete",
+  "marketplace.addToCart": "Add To Cart",
+  "marketplace.enterQuantity": "Enter Quantity",
   "marketplace.tbd": "TBD ! !",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
