#35583 Velloci registration fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2882,13 +2882,14 @@
   "velloci.personalInfo.socialSecurityNumber.placeholder": "123456789",
   "velloci.personalInfo.businessOwnershipPercentage": "Business Ownership Percentage",
   "velloci.personalInfo.businessOwnershipPercentage.placeholder": "xx",
-  "velloci.termsAndConditions.title": "Here are a few legal terms that you'll have to read and accept before finishing",
-  "velloci.termsAndConditions.electronicComunications": "I agree that I have read, understood and consent to the ",
+  "velloci.termsAndConditions.title": "Please review and accept the following terms and conditions to finish registration",
+  "velloci.termsAndConditions.electronicComunications": "I agree that I have read, understood, and consent to the ",
   "velloci.termsAndConditions.electronicComunications.link": "Electronic Communications Agreement ",
-  "velloci.termsAndConditions.privacyPolicy": "I agree that I have read, understood and consent to the ",
+  "velloci.termsAndConditions.privacyPolicy": "I agree that I have read, understood, and consent to the ",
   "velloci.termsAndConditions.privacyPolicy.link": "Privacy Policy ",
   "velloci.termsAndConditions.termsOfUse.link": "Terms of Use",
-  "velloci.termsAndConditions.depositAccountAgreement": "I agree that I have read, understood and consent to the bank's ",
+  "velloci.termsAndConditions.depositAccountAgreement": "I agree that I have read, understood, and consent to the bank's ",
+  "velloci.termsAndConditions.trueComplete": "I certify my answers are true and complete to the best of my knowledge.",
   "velloci.termsAndConditions.depositAccountAgreement.link": "Deposit Account Agreement ",
   "velloci.termsAndConditions.serviceTerms.link": "Service terms ",
   "global.dateFrom": "Date From",
