#35511 Marketplace/Bids Sent/Received design rework.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2010,6 +2010,7 @@
   "marketplace.multipleEchoProduct": "Please, only select inventory for the same product to get a Shipping Quote",
   "marketplace.notes": "Notes",
   "marketplace.info": "Info",
+  "marketplace.SearchBidByNameOrCompany": "Search bid by name or company...",
   "marketplace.makeAnOffer": "Make an Offer",
   "marketplace.productName": "Product Name",
   "marketplace.yourFobPriceOffer": "Your FOB price offer",
