Task #35599 - fix for text (capitalized)

--- a/localization/en.json
+++ b/localization/en.json
@@ -678,7 +678,7 @@
   "global.flammabilitySolidGas": "Flammability (solid, gas)",
   "global.generalAdvice": "General Advice",
   "global.emergencyCompanyName": "Emergency Company Name",
-  "global.emergencyContactName": "Emergency Contact name",
+  "global.emergencyContactName": "Emergency Contact Name",
   "global.emergencyPhone": "Emergency Phone",
   "global.hazardStatement": "Hazard Statement",
   "global.hazardousDecompositionProducts": "Hazardous Decomposition Products",
