--- a/localization/en.json
+++ b/localization/en.json
@@ -2767,6 +2767,7 @@
   "dashboard.totalSales.title": "Sales",
   "dashboard.totalBroadcastedValueWithoutMilion.title": "Broadcasted",
   "dashboard.totalUsersCount.title": "Users",
+  "dashboard.totalProductOffers.title": "Product Offers",
   "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
   "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
   "dasboard.companySales.graph.title": "Company Sum Of Sales Monthly",
@@ -2774,12 +2775,12 @@
   "dasboard.companiesUser.title": "COMPANIES BY USERS",
   "dasboard.companiesProducts.title": "COMPANIES BY PRODUCTS",
   "dasboard.companiesTransactions.title": "COMPANIES BY SALES",
-  "dasboard.productsQuantity.title": "PRODUCTS SOLD BY QUANTITY",
-  "dasboard.productsValue.title": "PRODUCTS SOLD BY VALUE",
+  "dasboard.productsQuantity.title": "PRODUCTS BY QUANTITY",
+  "dasboard.productsValue.title": "PRODUCTS BY VALUE",
   "dasboard.productsPopular.title": "PRODUCTS BY POPULAR",
   "dasboard.companyPurchase": "PURCHASES",
   "dasboard.companySales": "SALES",
-  "dasboard.topBuyers": "TOP 10 BUYERS",
+  "dasboard.topBuyers.title": "TOP 5 BUYERS",
   "dasboard.total": "Total",
   "dasboard.average": " average",
   "dashboard.dailyStats": "DAILY STATS",
