#35511 Design updates, submit and row detail close control.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2032,13 +2032,15 @@
   "marketplace.enterCounterBid": "Enter Counter Bid",
   "marketplace.or": "or",
   "marketplace.send": "Send",
+  "marketplace.close": "Close",
+  "marketplace.submit": "Submit",
   "marketplace.accept": "Accept",
   "marketplace.reject": "Reject",
   "marketplace.counter": "Counter",
   "marketplace.delete": "Delete",
   "marketplace.addToCart": "Add To Cart",
   "marketplace.enterQuantity": "Enter Quantity",
-  "marketplace.tbd": "TBD ! !",
+  "marketplace.detailRow.userCompanyHasCountered": "{name} of {company} has countered with {fob} for {quantity} of {product}",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by ID",
