--- a/localization/en.json
+++ b/localization/en.json
@@ -154,7 +154,7 @@
   "broadcast.keyword": "Keyword",
   "broadcast.selectTemplate": "Select Template",
   "broadcast.broadcastingTooltip": "Shows number of company branches out of the total company branches you will Broadcast to, once you turn Broadcasting on.",
-  "broadcast.companyInfo": "COMPANY INFO",
+  "broadcast.companyInfo": "Company Info",
   "boradcast.modal.companyName": "Company Name",
   "boradcast.modal.participateSince": "Participate Since",
   "errors.fileTooLarge.header": "Too large file",
@@ -953,6 +953,8 @@
   "global.international": "INTERNATIONAL",
   "global.caProp65": "CA PROP 65",
   "global.rightToKnow": "RIGHT TO KNOW",
+  "global.nacdReferences": "NACD References",
+  "global.nacdMember": "NACD Member",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
