--- a/localization/en.json
+++ b/localization/en.json
@@ -953,6 +953,8 @@
   "global.international": "INTERNATIONAL",
   "global.caProp65": "CA PROP 65",
   "global.rightToKnow": "RIGHT TO KNOW",
+  "global.required": "Required",
+  "global.lotExpiredDate": "Lot Expired Date",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -1208,6 +1210,8 @@
   "myInventory.productStatus.unmapped": "This Product Offer's Company Product is not mapped to Echo Product, so it will not be visible to other users at Marketplace.",
   "myInventory.tooltipExpired": "Shows if Product offer is expired",
   "myInventory.tooltipProductStatus": "Shows if Product offer's Generic Product is published and offer is visible on the Marketplace",
+  "myInventory.acceptBids": "Accept bids on offer?",
+  "myInventory.whoShouldSee": "Who should see this offer?",
   "filter.warehouse": "Warehouse",
   "filter.incomplete": "Incomplete",
   "filter.chemicalProductName": "Chemical / Product Name",
