Task #35728 - TDS - Test Method column

--- a/localization/en.json
+++ b/localization/en.json
@@ -1566,6 +1566,10 @@
   "addInventory.writeExternalNotesHere": "Write external notes here",
   "addInventory.writeInternalNotesHere": "Write internal notes here",
   "addInventory.tds": "TDS",
+  "addInventory.tdsFields.enterProperty": "Enter Property",
+  "addInventory.tdsFields.enterSpecifications": "Enter Specifications",
+  "addInventory.tdsFields.enterTestMethod": "Enter Test Method",
+  "addInventory.testMethod": "Test Method",
   "addInventory.property": "Property",
   "addInventory.specifications": "Specifications",
   "administration": "ADMINISTRATION",
