Task #35753 - TDS Templates (basic design) - missing main functionality

--- a/localization/en.json
+++ b/localization/en.json
@@ -1572,6 +1572,9 @@
   "addInventory.testMethod": "Test Method",
   "addInventory.property": "Property",
   "addInventory.specifications": "Specifications",
+  "addInventory.selectFromTemplates": "Select From Templates",
+  "addInventory.tdsTemplates": "TDS Templates",
+  "addInventory.tdsTemplates.savedTemplates": "Saved Templates",
   "administration": "ADMINISTRATION",
   "administration.newCompanyName": "New Company Name",
   "administration.companies": "Companies",
